# wisdom-tree

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.py  main.py  pyproject.toml  qts.txt  requirements.txt  setup.py
res/: growth.waw  p1.txt  p2.txt  p4.txt  p5.txt  p6.txt  p7.txt  p8.txt  p9.txt  rain1.txt  seed.txt  treedata
src/wisdom_tree/: audio.py  config.py  edit_quotes.py  main.py  qts.txt  timer.py  tree.py  ui.py  utils.py
src/wisdom_tree/res/: treedata
wisdom_tree/: __init__.py  edit_quotes.py  main.py  qts.txt  qts.txt.bak
wisdom_tree/res/: p3.txt
wisdomtree/: main.py
